syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";
import "common/v1/permission.proto";

option go_package = "github.com/aleksandr-mv/school_schedule/shared/pkg/proto/common/v1;common_v1";

// =============================================================================
// Role Common Types (common.v1)
// =============================================================================

// Роль пользователя
message Role {
  string id = 1 [(validate.rules).string.uuid = true];
  string name = 2 [(validate.rules).string.min_len = 2, (validate.rules).string.max_len = 50];
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  optional google.protobuf.Timestamp updated_at = 5;
}

// Роль с правами доступа
message RoleWithPermissions {
  Role role = 1;
  repeated Permission permissions = 2;
}
